Add pwd for debugging

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: 'Run code generation'
         run: |
+          echo $(pwd)
           python ../.github/workflows/generate.py ../rest-api-description/descriptions/api.github.com/api.github.com.json .
 
       - uses: stefanzweifel/git-auto-commit-action@v4
